    interface implementation. (Rohith via jlowe)

    MAPREDUCE-4879. TeraOutputFormat may overwrite an existing output
    directory. (gera)

    MAPREDUCE-6166. Reducers do not validate checksum of map outputs when
    fetching directly to disk. (Eric Payne via gera)

    MAPREDUCE-6045. need close the DataInputStream after open it in
    TestMapReduce.java (zxu via rkanter)

Release 2.6.0 - 2014-11-18

  INCOMPATIBLE CHANGES

  NEW FEATURES

    MAPREDUCE-5933. Enabled MR AM to post history events to the timeline server.
    (Robert Kanter via zjshen)

  IMPROVEMENTS

    MAPREDUCE-5971. Move the default options for distcp -p to
    DistCpOptionSwitch. (clamb via wang)

    MAPREDUCE-5963. ShuffleHandler DB schema should be versioned with
    compatible/incompatible changes (Junping Du via jlowe)

    MAPREDUCE-883. harchive: Document how to unarchive (Akira AJISAKA and
      Koji Noguchi via aw)

    MAPREDUCE-4791. Javadoc for KeyValueTextInputFormat should include default
      separator and how to change it (Akira AJISAKA via aw)

    MAPREDUCE-5906. Inconsistent configuration in property
      "mapreduce.reduce.shuffle.input.buffer.percent" (Akira AJISAKA via aw)

    MAPREDUCE-5974. Allow specifying multiple MapOutputCollectors with 
    fallback. (Todd Lipcon via kasha)

    MAPREDUCE-5130. Add missing job config options to mapred-default.xml
    (Ray Chiang via Sandy Ryza)

    MAPREDUCE-5891. Improved shuffle error handling across NM restarts
    (Junping Du via jlowe)

    MAPREDUCE-5279. Made MR headroom calculation honor cpu dimension when YARN
    scheduler resource type is memory plus cpu. (Peng Zhang and Varun Vasudev
    via zjshen)

    MAPREDUCE-6072. Remove INSTALL document (Akira AJISAKA via aw)

    MAPREDUCE-5970. Provide a boolean switch to enable MR-AM profiling (Gera
    Shegalov via jlowe)

    MAPREDUCE-6018. Added an MR specific config to enable emitting job history
    data to the timeline server. (Robert Kanter via zjshen)
